tried with console application...

--- a/Entities/Entities.csproj
+++ b/Entities/Entities.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="EntityFramework" Version="6.4.4" />
+    <PackageReference Include="Northwind" Version="1.0.0.6" />
+  </ItemGroup>
+
 </Project>
